# erc20

./: .gitignore  README.md  package.json  redspot.config.ts
contracts/: Cargo.toml  lib.rs  rust-toolchain.toml
scripts/: deploy.ts
