[package]
name = "erc20"
version = "3.0.0-rc8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
ink_primitives = { rev = "c5fe47b", version = "3.0.0-rc8", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { rev = "c5fe47b", version = "3.0.0-rc8", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { rev = "c5fe47b", version = "3.0.0-rc8", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { rev = "c5fe47b", version = "3.0.0-rc8", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { rev = "c5fe47b", version = "3.0.0-rc8", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "erc20"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
